nagios-plugins (1.4.15-4) UNRELEASED; urgency=low

  * Add 13_check_smtp_greeting.dpatch (Closes: #611914), thanks Daniel Piddock
    for spotting and Holger Weiss for providing a fix
    - Abort immediately if we don't receive a server greeting or if the
      greeting doesn't contain the "--expect"ed string (by default: "220")
      instead of blindly sending the EHLO/HELO line.

 -- Jan Wagner <waja@cyconet.org>  Mon, 27 Dec 2010 22:13:48 +0100

nagios-plugins (1.4.15-3) unstable; urgency=low

  * Add 10_check_disk_smb_spaces.dpatch from upstream svn (Closes: #601699),
    thanks to Adam Buchbinder
  * Add 11_check_disk_smb_NT_STATUS_ACCESS_DENIED.dpatch from upstream svn
    (Closes: #601696), thanks to Adam Buchbinder
  * Fix broken symlink of README.Debian.plugins (Closes: #603414), thanks
    Bernd Zeimetz
  * Add patche provided by upstream to fix regressions with check_snmp
    introduced in 1.4.15 (Closes: #607736)
    - 12_check_snmp_1.4.15_regression.dpatch

 -- Jan Wagner <waja@cyconet.org>  Wed, 22 Dec 2010 00:43:02 +0100

nagios-plugins (1.4.15-2) unstable; urgency=low

  [ Alexander Wirt ]
  * Call ps with two "w" to ensure unlimited width of ps output
    (Closes: #596372)

  [ Jan Wagner ]
  * Add 05_check_linux_raid_fix_striped.dpatch to fix bad output from
    check_linux_raid with RAID0 and linear volumes, thanks to Thomas
    Guyot-Sionnest (Closes: #579049) - LP: #621380
  * Bump Standards-Version to 3.9.1, no changes needed

 -- Jan Wagner <waja@cyconet.org>  Thu, 23 Sep 2010 09:24:39 +0200

nagios-plugins (1.4.15-1) unstable; urgency=low

  * New upstream release (Closes: #588273, #522631)
  * Droped the following upstream integrated patches
     - 03_check_smtp_help.dpatch
     - 06_checkircd.dpatch
     - 18_check_game_cmdline.dpatch
     - 22_check_smb_hostaddress.dpatch
     - 32_check_ldap_pointer.dpatch
     - 33_fix_emb_check_disk_smb.dpatch
     - 34_fix_smbclient_check_disk_smb.dpatch
     - 35_check_http_date.dpatch